2006-07-11  Kim F. Storm  <storm@cua.dk>

	* dispnew.c (sit_for): Reduce number of args from 5 to 3.
	Now just one TIMEOUT arg that can be a Lisp float or Lisp int.
	Combine args DISPLAY and INITIAL_DISPLAY into one arg DO_DISPLAY.
	Undo 2006-06-14 change for non-preemptive display if TIMEOUT < 0.
	The rework of sit_for args also fixes several incorrect Qt args
	which should have been 1.
	(Fredisplay): Pass 1 instead of Qt to swallow_events and
	detect_input_pending_run_timers.

	* lisp.h (sit_for): Update prototype.
	(Fredisplay): Add EXFUN.

	* dispextern.h (sit_for): Remove prototype.

	* callint.c (Fcall_interactively):
	* minibuf.c (temp_echo_area_glyphs):
	* keyboard.c (command_loop_1, read_char, Fexecute_extended_command):
	* fileio.c (Fdo_auto_save): Update/simplify sit_for calls.

2006-07-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (forw_comment): Also use EMACS_INT for buffer positions.

2006-07-11  Kim F. Storm  <storm@cua.dk>

	* dispnew.c (Fredisplay): Add FORCE argument to force redisplay	when
	input is available.  Fix test for redisplay_dont_pause non-nil.
	Specbind redisplay-dont-pause to t if FORCE non-nil.

2006-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* puresize.h (BASE_PURESIZE): Increment to 1211000.

	* dispnew.c (Fredisplay): New function, equivalent to (sit-for 0).
	(Fsit_for): Function deleted.

	* keyboard.c (command_loop_1, Fexecute_extended_command):
	Call sit_for instead of Fsit_for.

	* minibuf.c (temp_echo_area_glyphs): Likewise.

2006-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (Fforward_comment): Revert the reversion.
	(back_comment, scan_lists): Also use EMACS_INT for buffer positions.

2006-07-09  John Paul Wallington  <jpw@pobox.com>

	* syntax.c (Fforward_comment): Revert previous change.

2006-07-09  Kim F. Storm  <storm@cua.dk>

	* window.c (Fforce_window_update): Doc fix.

2006-07-08  Stephen Gildea  <gildea@stop.mail-abuse.org>
